--- a/flask-shop/requirements.txt
+++ b/flask-shop/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.4.2
 cachelib==0.1.1
+captcha==0.3
 click==7.1.2
 Flask==1.1.2
 Flask-Migrate==2.5.3
@@ -11,6 +12,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.3
 MarkupSafe==1.1.1
+Pillow==7.2.0
 PyMySQL==0.10.0
 python-dateutil==2.8.1
 python-editor==1.0.4
