--- a/flask-shop/requirements.txt
+++ b/flask-shop/requirements.txt
@@ -1,6 +1,8 @@
 alembic==1.4.2
 cachelib==0.1.1
 captcha==0.3
+certifi==2020.6.20
+chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
 Flask-Migrate==2.5.3
@@ -8,6 +10,7 @@ Flask-Script==2.0.6
 Flask-Session==0.3.2
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.3
@@ -17,7 +20,9 @@ PyMySQL==0.10.0
 python-dateutil==2.8.1
 python-editor==1.0.4
 redis==3.5.3
+requests==2.24.0
 six==1.15.0
 SQLAlchemy==1.3.19
+urllib3==1.25.10
 Werkzeug==1.0.1
 WTForms==2.3.3
