--- a/vue-shop/package.json
+++ b/vue-shop/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@vue/composition-api": "^1.0.0-beta.11",
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "element-ui": "^2.13.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
