--- a/template_for_flask/requirements.txt
+++ b/template_for_flask/requirements.txt
@@ -8,6 +8,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.3
 MarkupSafe==1.1.1
+PyMySQL==0.10.1
 python-dateutil==2.8.1
 python-editor==1.0.4
 six==1.15.0
